# gh-actions-test

./: .gitignore  README.md  pyproject.toml
.github/workflows/: node-test.yml  python-test.yml  testing.yml
nextjs-blog/: package-lock.json  package.json
nextjs-blog/__test__/: a.test.js
src/: operations.py
tests/: test_operations.py
