[tool.poetry]
name = "github-actions-testing"
version = "0.1.0"
description = "Learning purposes"
authors = ["Jesús Oyanedel"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.11.4"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
